Improve Business Aspect Test structure
Enhance test readability with satisfies() assertions and better grouping.
Add null argument handling test. Improve comments and formatting for
clarity. Maintain full test coverage with cleaner assertion patterns.